# face-detection-Android-Studio

./: .gitignore  import-summary.txt  local.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
openCVLibrary310/src/main/: AndroidManifest.xml
openCVSamplefacedetection/: build.gradle
openCVSamplefacedetection/src/main/: AndroidManifest.xml
openCVSamplefacedetection/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
openCVSamplefacedetection/src/main/jni/: Android.mk  CMakeLists.txt  DetectionBasedTracker_jni.cpp
openCVSamplefacedetection/src/main/jni/native/jni/: OpenCVConfig.cmake
openCVSamplefacedetection/src/main/res/layout/: face_detect_surface_view.xml
